# qrcodekit

./: .gitignore  README.md  pyproject.toml  requirements.txt
qrcodekit/: qrcodekit.py
scripts/: btc.py  simple.py  wifi.py
src/qrcodekit/: __init__.py  qr_code.py  qr_code_cards.py  qr_code_formatters.py
tests/: test_qrcodekit.py
