[project]
name = "qrcodekit"
version = "0.2.0"
description = "A collection of QR code tools."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "ajrlewis", email = "hello@ajrlewis.com" }
]
dependencies = [
    "loguru==0.7.3",
    "pillow==11.1.0",
    "qrcode==8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]
